<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MontyPays</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="tv_title_desc">Enter your details to create\nyour new account</string>
    <string name="full_name">Full Name</string>
    <string name="work_email">Work Email</string>
    <string name="country">Country</string>
    <string name="_33">+33</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="company_name">Company Name</string>
    <string name="website">Website</string>
    <string name="company_size">Company Size</string>
    <string name="already_have_account">Already have an account? Log in</string>
    <string name="logo">logo</string>
    <string name="login">Login</string>
    <string name="tv_log_in_desc">Enter your login details to\naccess your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up Account</string>
    <string name="sign_up_account">Sign Up Account</string>
    <string name="terms_and_condition">Terms and Conditions</string>
    <string name="apply">Apply</string>
    <string name="forgot_password2">Forgot Password!</string>
    <string name="enter_your_username_below_and_we_ll_email_instructions_for_setting_a_new_one">Enter your username below, and we’ll\nemail instructions for setting a new one</string>
    <string name="email">Email</string>
    <string name="john_montypay_com">john@montypay.com</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="almost_done">Almost Done...</string>
    <string name="logout">Log out</string>
    <string name="payment_preferences">Payment Preferences</string>
    <string name="share_settings">Share Settings</string>
    <string name="log_out_of_montypay">Log out of\nMontyPay?</string>
    <string name="cancel">Cancel</string>
    <string name="log_out">Log out</string>
    <string name="pickcountrycode">pickCountryCode</string>
    <string name="periodicals">Periodicals</string>
    <string name="filter_by">Filter By</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="oops">Oops!</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="for_help_call_1777_thank_you">For help call 1777. Thank you</string>
    <string name="try_later">try later</string>
    <string name="something_went_wrong_please">Something went wrong! Please</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="search">Search…</string>
    <string name="my_account">My Account</string>
    <string name="version_1_2">Version 1.2</string>
    <string name="account_information">Account Information</string>
    <string name="admin_starbucks_com">admin@starbucks.com</string>
    <string name="john_smith">John Smith</string>
    <string name="delete_account">Delete Account</string>
    <string name="total_volume">Total Volume</string>
    <string name="_0">$0</string>
    <string name="today_may_23">Today May 23</string>
    <string name="successful_transactions">Successful Transactions</string>
    <string name="usd">USD</string>
    <string name="qr_pay">QR PAY</string>
    <string name="take_payments_on_the_go_using_your_phone_with_our_qr_codes">Take payments on-the go using your phone with our QR codes</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">Enter amount</string>
    <string name="filter_by_merchant">Filter by merchant</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="title_activity_save_password_screen">SavePasswordScreen</string>


</resources>