<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.presentation.login.LogInFragment">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="188dp"
                android:layout_height="129dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/log_in_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="28dp"
                android:text="@string/login"
                android:textColor="#071929"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tv_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="18dp"
                android:text="@string/tv_log_in_desc"
                android:textColor="#313450"
                android:textSize="17sp"
                app:layout_constraintBottom_toTopOf="@+id/tv_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="52.1dp"
                android:layout_marginTop="25.7dp"
                android:text="@string/username"
                android:textColor="#393a3b"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_description" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/linearLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="9.3dp"
                android:layout_marginEnd="35dp"
                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                app:boxStrokeErrorColor="@color/red"
                app:endIconMode="clear_text"
                app:hintEnabled="false"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerCircle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_username"
                >


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="52.1dp"
                android:layout_marginTop="18dp"
                android:text="@string/password"
                android:textColor="#393a3b"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/linearLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/linearLayout2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="9.3dp"
                android:layout_marginEnd="35dp"
                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                app:boxStrokeErrorColor="@color/red"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_password"
                app:passwordToggleEnabled="true"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerCircle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:textSize="16sp" />


            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tv_forgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="21.5dp"
                android:layout_marginEnd="34dp"
                android:gravity="end"
                android:text="@string/forgot_password"
                android:textColor="#313450"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

            <TextView
                android:id="@+id/tv_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80.2dp"
                android:gravity="center"
                android:text="@string/dont_have_account"
                android:textColor="#313450"
                android:textSize="13sp"
                app:layout_constraintBottom_toTopOf="@id/bt_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_forgotPassword" />

            <!--            <TextView-->
            <!--                android:id="@+id/tv_account"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginStart="5dp"-->
            <!--                android:layout_marginTop="80.2dp"-->
            <!--                android:gravity="center"-->
            <!--                android:text="@string/sign_up_account"-->
            <!--                android:textColor="#1fa9e5"-->
            <!--                android:textSize="13sp"-->
            <!--                android:textStyle="bold"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintStart_toEndOf="@+id/textView4"-->
            <!--                app:layout_constraintTop_toBottomOf="@+id/tv_forgotPassword" />-->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="55dp"
                android:layout_marginEnd="35dp"
                android:backgroundTint="#1fa9e5"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_account"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.rounded" />

            <TextView
                android:id="@+id/tv_terms_condition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="55dp"
                android:layout_marginEnd="51dp"
                android:gravity="center"
                android:text="@string/terms_and_condition"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bt_login" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/log_in_logo_2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollView"
                app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>